--- a/report/Design/design.tex
+++ b/report/Design/design.tex
@@ -329,6 +329,7 @@ An anthem in the judgements after verse!
 The idea that constraints do not hinder but rather help the creative process is an attractive one for Computational Creativity research. Constraining words and other requirements for each particular word position is a natural technique for constraint programming, but extremely restrictive. First, the size of each line must be defined by number of words \textit{and then} by rhythm and other poetic features. Secondly, once the candidate words are chosen there is no scope for further filtering. Finally, the structure of the poem in terms of its parts-of-speech (section \ref{sec:syntax}) tags must be defined beforehand and is taken from previous poems of the same type, as seen in Figure \ref{fig:con2}. Even though this is an efficient method that has produced impressive results, it is too restricted to produce truly creative work.
 
 \subsection{Learn from Experience}
+\label{sec:RKCP}
 
 Ray Kurtzweil Cybernetic Poet (RKCP), created by Kurtzweil himself\cite{kurzweil1999ray}, addresses the issue of having a predefined template. He uses a stochastic approach that takes advantage of n-grams to build lines from words. The system was trained on a selection of poems and created a template and n-gram corpus from those poems. RKCP would then be able to create similar types of poems. Algorithms were employed to ensure that poems were not exact copies of other poems and to maintain a coherent theme.
 
