--- a/report/report.tex
+++ b/report/report.tex
@@ -56,6 +56,9 @@
 %\usepackage{cite}
 \usepackage[utf8]{inputenc}
 \usepackage{listings}
+\usepackage{algorithmicx}
+\usepackage{algpseudocode}
+\usepackage{algorithm}
 \usepackage{color}
 \lstset{frame=tb,
   language=Python,
